# Zomato-Recommendation

./: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py
docs/: architecture.md  deploymentPlan.md  edgecase.md  implementationPlan.md  problemStatement.md
docs/eval/: README.md  phase-0-eval.md  phase-1-eval.md  phase-2-eval.md  phase-3-eval.md  phase-4-eval.md  phase-5-eval.md  phase-6-eval.md
scripts/: filter_demo.py  ingest.py  llm_demo.py  scratch_explore_data.py
src/zomato_cursor/: __init__.py  config.py
src/zomato_cursor/data/: __init__.py  loader.py  preprocessor.py  store.py
src/zomato_cursor/models/: __init__.py  preferences.py  response.py  restaurant.py
src/zomato_cursor/services/: __init__.py  filter_service.py  llm_client.py  no_match_builder.py  orchestrator.py  output_validator.py  prompt_builder.py  response_mapper.py
tests/: test_config.py  test_filter_service.py  test_orchestrator.py  test_preprocessor.py  test_validator.py
